updated at: 2020-02-04 23:54, 【VRchat向けアバター】オフィスオオカミ【無償版あり・オキュラスクエスト対応】 - chemical&#39;s shop - BOOTH

--- a/VRChat/25/1285125.html
+++ b/VRChat/25/1285125.html
@@ -7,7 +7,7 @@
       BOOTH
     </title>
     <meta name="description" content=
-    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱 ※2019年7月01日更新：BOOST版の使い方テキストの修正 VRchat用のモデルとなります。 ■BOOST用内容 ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版） ・表情ファイル">
+    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱 ※2019年7月01日更新：BOOST版の使い方テキストの修正 ※2020年2月4日更新：フルトラ時に腰が横にずれる問題の修正 VRchat用のモデルとなります。 ■BOOST用内容 ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版）">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1285125">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "【VRchat向けアバター】オフィスオオカミ【無償版あり・オキュラスクエスト対応】 - chemical's shop - BOOTH">
     <meta name="twitter:description" content=
-    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱 ※2019年7月01日更新：BOOST版の使い方テキストの修正 VRchat用のモデルとなります。 ■BOOST用内容 ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版） ・表情ファイル">
+    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱 ※2019年7月01日更新：BOOST版の使い方テキストの修正 ※2020年2月4日更新：フルトラ時に腰が横にずれる問題の修正 VRchat用のモデルとなります。 ■BOOST用内容 ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1285125/e52d1067-20e8-4378-8405-c0afaf2734a8_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRchat向けアバター】オフィスオオカミ【無償版あり・オキュラスクエスト対応】 - chemical's shop - BOOTH">
     <meta property="og:description" content=
-    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱 ※2019年7月01日更新：BOOST版の使い方テキストの修正 VRchat用のモデルとなります。 ■BOOST用内容 ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版） ・表情ファイル">
+    "Reprint is prohibited（他サイトへの転載はおやめください） このアバターはHimiko Avatar Worldにて試着可能です。 ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱 ※2019年7月01日更新：BOOST版の使い方テキストの修正 ※2020年2月4日更新：フルトラ時に腰が横にずれる問題の修正 VRchat用のモデルとなります。 ■BOOST用内容 ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版）">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1285125/e52d1067-20e8-4378-8405-c0afaf2734a8_base_resized.jpg">
     <meta property="og:url" content=
@@ -180,8 +180,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "オフィスオオカミ無償版019_08_04.zip"
-                                    href="https://booth.pm/downloadables/666816">
+                                    "オフィスオオカミ無償版2020_02_04.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/889770">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -190,13 +191,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        オフィスオオカミ無償版019_08_04
+                                        オフィスオオカミ無償版2020_02_04
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(16.8 MB)
+                                        &nbsp;(340 KB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -348,6 +349,7 @@
                             ※2019年4月6日更新：blenderで編集するときにシェイプキーが出なかった問題を修正しました
                             ※2019年6月14日更新：BOOST版にquestセットアップ済unityPackagを同梱
                             ※2019年7月01日更新：BOOST版の使い方テキストの修正
+                            ※2020年2月4日更新：フルトラ時に腰が横にずれる問題の修正
                             VRchat用のモデルとなります。 ■BOOST用内容
                             ・Materialセットアップ済のモデル（初期通常版・初期ケモノ版）
                             ・表情ファイル ・オキュラスクエスト向けセットアップ済unityPackag
