updated at: 2020-02-05 03:31, 【銘菓】ひにょうまんじゅう - ばに屋 - BOOTH

--- a/VRChat/15/1181915.html
+++ b/VRChat/15/1181915.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【銘菓】ひにょうまんじゅう - BUNYAN WORKS COMPANY - BOOTH
+      【銘菓】ひにょうまんじゅう - ばに屋 - BOOTH
     </title>
     <meta name="description" content=
     "ひにょうさんをイメージしたおまんじゅうです。 お土産や非常食にいかがですか？ ※ひにょうさんに風評被害が及ばない範囲で遊んでね">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【銘菓】ひにょうまんじゅう - BUNYAN WORKS COMPANY - BOOTH">
+    "【銘菓】ひにょうまんじゅう - ばに屋 - BOOTH">
     <meta name="twitter:description" content=
     "ひにょうさんをイメージしたおまんじゅうです。 お土産や非常食にいかがですか？ ※ひにょうさんに風評被害が及ばない範囲で遊んでね">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/867d2324-2658-4bb8-b5cd-6d3213e2ff63/i/1181915/c7c4f68b-c938-4f08-a371-45628b1cbfbd_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【銘菓】ひにょうまんじゅう - BUNYAN WORKS COMPANY - BOOTH">
+    "【銘菓】ひにょうまんじゅう - ばに屋 - BOOTH">
     <meta property="og:description" content=
     "ひにょうさんをイメージしたおまんじゅうです。 お土産や非常食にいかがですか？ ※ひにょうさんに風評被害が及ばない範囲で遊んでね">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://bunyanp.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="BUNYAN WORKS COMPANY" class=
+                            <img alt="ばに屋" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/4916877/icon_image/c7db5b1f-cc7b-4f31-9bd4-3959cf2581aa_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/4916877/icon_image/007c3a84-647b-4188-b691-6b69a326fc57_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              BUNYAN WORKS COMPANY
+                              ばに屋
                             </div>
                           </div></a>
                         </div>
@@ -207,8 +207,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1181915"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "【銘菓】ひにょうまんじゅう | BUNYAN WORKS COMPANY"
+                          data-text="【銘菓】ひにょうまんじゅう | ばに屋"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
