--- a/VRChat/28/1138528.html
+++ b/VRChat/28/1138528.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      RaymarchingStrapシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH
+      RaymarchingStrapシェーダー - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "白黒の画像からオブジェクトを作り出すシェーダーです アバターのアクセサリーに使ったり、ワールドの小物として使ってください 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1064859851195539456 (制作過程がリプで連なっています)">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "RaymarchingStrapシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "RaymarchingStrapシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "白黒の画像からオブジェクトを作り出すシェーダーです アバターのアクセサリーに使ったり、ワールドの小物として使ってください 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1064859851195539456 (制作過程がリプで連なっています)">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1138528/784e2cd8-94ae-4a62-8610-9878057cee40_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "RaymarchingStrapシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "RaymarchingStrapシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "白黒の画像からオブジェクトを作り出すシェーダーです アバターのアクセサリーに使ったり、ワールドの小物として使ってください 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1064859851195539456 (制作過程がリプで連なっています)">
     <meta property="og:image" content=
@@ -136,11 +136,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -240,7 +240,7 @@
                           "https://booth.pm/ja/items/1138528"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "RaymarchingStrapシェーダー | がとーしょこらのおみせ @gatosyocora"
+                          "RaymarchingStrapシェーダー | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
