--- a/VRChat/15/1128715.html
+++ b/VRChat/15/1128715.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      PictureMaskシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH
+      PictureMaskシェーダー - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "写真などのテクスチャをマスクテクスチャを使って好きな形に切り抜くことができるシェーダーです 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1070689627676147712 設定可能なパラメータは以下の通りです。 Auto TextureRatio : チェックをいれるとオブジェクトの縦横比をTextureの縦横比に合わせます Texture : 切り抜かれるテクスチャ BackColor : オブジェクトの背面の色 [Mask] Inverse : チェックをいれると切り抜く部分を反転します MaskTexture :">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "PictureMaskシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "PictureMaskシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "写真などのテクスチャをマスクテクスチャを使って好きな形に切り抜くことができるシェーダーです 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1070689627676147712 設定可能なパラメータは以下の通りです。 Auto TextureRatio : チェックをいれるとオブジェクトの縦横比をTextureの縦横比に合わせます Texture : 切り抜かれるテクスチャ BackColor : オブジェクトの背面の色 [Mask] Inverse : チェックをいれると切り抜く部分を反転します MaskTexture :">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1128715/8476beed-093d-46e9-940d-1851b4906a53_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "PictureMaskシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "PictureMaskシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "写真などのテクスチャをマスクテクスチャを使って好きな形に切り抜くことができるシェーダーです 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1070689627676147712 設定可能なパラメータは以下の通りです。 Auto TextureRatio : チェックをいれるとオブジェクトの縦横比をTextureの縦横比に合わせます Texture : 切り抜かれるテクスチャ BackColor : オブジェクトの背面の色 [Mask] Inverse : チェックをいれると切り抜く部分を反転します MaskTexture :">
     <meta property="og:image" content=
@@ -136,11 +136,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -225,7 +225,7 @@
                           "https://booth.pm/ja/items/1128715"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "PictureMaskシェーダー | がとーしょこらのおみせ @gatosyocora"
+                          "PictureMaskシェーダー | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
