updated at: 2020-02-05 17:35, 8NeighborFilterシェーダー - がとーしょこらのおみせ - BOOTH

--- a/VRChat/97/1102597.html
+++ b/VRChat/97/1102597.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      8NeighborFilterシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH
+      8NeighborFilterシェーダー - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "周囲のピクセルを参考して計算するフィルタをかけることができるシェーダーです。 このシェーダーを適用したオブジェクト越しに見ると世界が少し変わって見えます。 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1064913102460743680 https://twitter.com/gatosyocora/status/1065312106793250816 (商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません) 設定可能なパラメータは以下の通りです。 ・CullMode">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "8NeighborFilterシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "8NeighborFilterシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "周囲のピクセルを参考して計算するフィルタをかけることができるシェーダーです。 このシェーダーを適用したオブジェクト越しに見ると世界が少し変わって見えます。 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1064913102460743680 https://twitter.com/gatosyocora/status/1065312106793250816 (商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません) 設定可能なパラメータは以下の通りです。 ・CullMode">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1102597/e6a20fe2-cda1-49e2-b027-3d396d8dae75_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "8NeighborFilterシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "8NeighborFilterシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "周囲のピクセルを参考して計算するフィルタをかけることができるシェーダーです。 このシェーダーを適用したオブジェクト越しに見ると世界が少し変わって見えます。 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1064913102460743680 https://twitter.com/gatosyocora/status/1065312106793250816 (商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません) 設定可能なパラメータは以下の通りです。 ・CullMode">
     <meta property="og:image" content=
@@ -136,11 +136,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1102597"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "8NeighborFilterシェーダー | がとーしょこらのおみせ @gatosyocora"
+                          "8NeighborFilterシェーダー | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
