--- a/VRChat/39/1016739.html
+++ b/VRChat/39/1016739.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRCDeveloperTool - がとーしょこらのおみせ @gatosyocora - BOOTH
+      VRCDeveloperTool - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定) この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています https://booth.pm/ja/items/1258744">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRCDeveloperTool - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "VRCDeveloperTool - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定) この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています https://booth.pm/ja/items/1258744">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1016739/622ac638-57a1-40df-945b-b56a4ec17b82_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRCDeveloperTool - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "VRCDeveloperTool - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定) この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています https://booth.pm/ja/items/1258744">
     <meta property="og:image" content=
@@ -123,11 +123,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -279,7 +279,7 @@
                           "https://booth.pm/ja/items/1016739"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "VRCDeveloperTool | がとーしょこらのおみせ @gatosyocora"
+                          "VRCDeveloperTool | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
