updated at: 2020-02-05 20:51, EasyToTakeSSシェーダー - がとーしょこらのおみせ - BOOTH

--- a/VRChat/25/1002225.html
+++ b/VRChat/25/1002225.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      EasyToTakeSSシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH
+      EasyToTakeSSシェーダー - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "VRChatでスクリーンショット(SS)を撮る際に画面に貼りつくことで綺麗に撮影できるようになるシェーダーです。 名刺やワールドで生成したテクスチャなどを持ち帰る際に使えると思います。 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1036778026485276673 (商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)や名刺のテクスチャは同封しておりません) 使用例として名刺とQRコードをPrefabにして同封しました。 設定可能なパラメータは以下の通りです。 ・Cull :">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "EasyToTakeSSシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "EasyToTakeSSシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "VRChatでスクリーンショット(SS)を撮る際に画面に貼りつくことで綺麗に撮影できるようになるシェーダーです。 名刺やワールドで生成したテクスチャなどを持ち帰る際に使えると思います。 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1036778026485276673 (商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)や名刺のテクスチャは同封しておりません) 使用例として名刺とQRコードをPrefabにして同封しました。 設定可能なパラメータは以下の通りです。 ・Cull :">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1002225/b70c23fd-48a4-4aa3-afba-2e38e6dca4dc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "EasyToTakeSSシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "EasyToTakeSSシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "VRChatでスクリーンショット(SS)を撮る際に画面に貼りつくことで綺麗に撮影できるようになるシェーダーです。 名刺やワールドで生成したテクスチャなどを持ち帰る際に使えると思います。 紹介ツイート・使用例↓ https://twitter.com/gatosyocora/status/1036778026485276673 (商品紹介の画像や紹介ツイートに写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)や名刺のテクスチャは同封しておりません) 使用例として名刺とQRコードをPrefabにして同封しました。 設定可能なパラメータは以下の通りです。 ・Cull :">
     <meta property="og:image" content=
@@ -136,11 +136,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -240,7 +240,7 @@
                           "https://booth.pm/ja/items/1002225"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "EasyToTakeSSシェーダー | がとーしょこらのおみせ @gatosyocora"
+                          "EasyToTakeSSシェーダー | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
