updated at: 2020-02-05 21:01, SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ - BOOTH

--- a/VRChat/51/995951.html
+++ b/VRChat/51/995951.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ @gatosyocora -
-      BOOTH
+      SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "主にVRChatで超ガチ恋距離モードが適用されているワールドか判定するために作りました。 超ガチ恋距離モードが適用されているとこのシェーダーを割り振ったオブジェクトが表示されます。 各ワールドの調査やかわいい動きをするときの目安になるかもしれないです。 使用例↓ https://twitter.com/gatosyocora/status/1034047282281238529 (商品紹介の画像や使用例に写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません) 設定可能なパラメータは以下の通りです。 ・Texture : 表示されるテクスチャ ・Editing">
@@ -14,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "主にVRChatで超ガチ恋距離モードが適用されているワールドか判定するために作りました。 超ガチ恋距離モードが適用されているとこのシェーダーを割り振ったオブジェクトが表示されます。 各ワールドの調査やかわいい動きをするときの目安になるかもしれないです。 使用例↓ https://twitter.com/gatosyocora/status/1034047282281238529 (商品紹介の画像や使用例に写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません) 設定可能なパラメータは以下の通りです。 ・Texture : 表示されるテクスチャ ・Editing">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/995951/7f3116d9-c81b-4ee3-bd12-c6ea231846ec_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "主にVRChatで超ガチ恋距離モードが適用されているワールドか判定するために作りました。 超ガチ恋距離モードが適用されているとこのシェーダーを割り振ったオブジェクトが表示されます。 各ワールドの調査やかわいい動きをするときの目安になるかもしれないです。 使用例↓ https://twitter.com/gatosyocora/status/1034047282281238529 (商品紹介の画像や使用例に写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません) 設定可能なパラメータは以下の通りです。 ・Texture : 表示されるテクスチャ ・Editing">
     <meta property="og:image" content=
@@ -125,11 +124,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -212,7 +211,7 @@
                           "https://booth.pm/ja/items/995951"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "SuperRealLoveDistModeCheckシェーダー | がとーしょこらのおみせ @gatosyocora"
+                          "SuperRealLoveDistModeCheckシェーダー | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
