--- a/VRChat/28/993328.html
+++ b/VRChat/28/993328.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      PlayAreaOutsideシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH
+      PlayAreaOutsideシェーダー - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "特定の角度から撮影したときにテクスチャが表示されるシェーダーです。 VRChatでアバターのスカートの中の覗き防止として使うために制作しました。 他の用途としても利用可能です。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "PlayAreaOutsideシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "PlayAreaOutsideシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "特定の角度から撮影したときにテクスチャが表示されるシェーダーです。 VRChatでアバターのスカートの中の覗き防止として使うために制作しました。 他の用途としても利用可能です。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/993328/ac952d38-9089-4422-8130-a13e78c84825_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "PlayAreaOutsideシェーダー - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "PlayAreaOutsideシェーダー - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "特定の角度から撮影したときにテクスチャが表示されるシェーダーです。 VRChatでアバターのスカートの中の覗き防止として使うために制作しました。 他の用途としても利用可能です。">
     <meta property="og:image" content=
@@ -136,11 +136,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -225,7 +225,7 @@
                           "https://booth.pm/ja/items/993328"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "PlayAreaOutsideシェーダー | がとーしょこらのおみせ @gatosyocora"
+                          "PlayAreaOutsideシェーダー | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
