updated at: 2020-02-05 22:46, VRChat向け3Dモデル「白神鈴」 - 白星Vトリエ - BOOTH

--- a/VRChat/19/1323719.html
+++ b/VRChat/19/1323719.html
@@ -310,6 +310,15 @@
                             <img alt="VRChat向け3Dモデル「白神鈴」" class=
                             "market-item-detail-item-image"
                             data-lazy=
+                            "https://booth.pximg.net/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/9da7ea40-5a89-4605-8ad2-a579bec9d4b2_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="VRChat向け3Dモデル「白神鈴」" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/52d56fc2-864e-4681-8c2e-62605ecd8a09_base_resized.jpg">
                           </div>
                         </div>
@@ -343,6 +352,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/a6b58ebe-fada-4342-a53f-4eccf4e4a85d_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/9da7ea40-5a89-4605-8ad2-a579bec9d4b2_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
