updated at: 2020-02-05 23:13, UploadPlatformChecker - がとーしょこらのおみせ - BOOTH

--- a/VRChat/67/1313067.html
+++ b/VRChat/67/1313067.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      UploadPlatformChecker - がとーしょこらのおみせ @gatosyocora - BOOTH
+      UploadPlatformChecker - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "SceneViewの左上に選択中のBuild Platformを表示したり、切り替えたりできるUnityエディタ拡張です。 VRChatでOculusQuest用にアバターやワールドをアップロードする際に使用することを想定しています。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "UploadPlatformChecker - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "UploadPlatformChecker - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "SceneViewの左上に選択中のBuild Platformを表示したり、切り替えたりできるUnityエディタ拡張です。 VRChatでOculusQuest用にアバターやワールドをアップロードする際に使用することを想定しています。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1313067/18355e20-5526-4211-a4c7-dae35215249a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "UploadPlatformChecker - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "UploadPlatformChecker - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "SceneViewの左上に選択中のBuild Platformを表示したり、切り替えたりできるUnityエディタ拡張です。 VRChatでOculusQuest用にアバターやワールドをアップロードする際に使用することを想定しています。">
     <meta property="og:image" content=
@@ -123,11 +123,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -212,7 +212,7 @@
                           "https://booth.pm/ja/items/1313067"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "UploadPlatformChecker | がとーしょこらのおみせ @gatosyocora"
+                          "UploadPlatformChecker | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
