updated at: 2020-02-06 00:33, 【無料ゲーム公開中】３Dモデル　食器・調理道具セット　ゲーム・漫画等利用可 - Papyrus Project - BOOTH

--- a/VRChat/36/1274236.html
+++ b/VRChat/36/1274236.html
@@ -7,7 +7,7 @@
       BOOTH
     </title>
     <meta name="description" content=
-    "本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版） 購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル 食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted pot.fbx）（容量：21kB、ポリゴン数：394） ・ボウル（Bowl.fbx）（容量：22kB、ポリゴン数：480） ・はし（chopstick_set.fbx）（容量：24kB、ポリゴン数：338） ・包丁（Cleaver.fbx）（容量：17kB、ポリゴン数：116） ・まな板（Cutting">
+    "2020年2月5日：一部のモデルサイズを変更いたしました。 本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版） 購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル 食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted pot.fbx）（容量：21kB、ポリゴン数：394、テクスチャなし） ・ボウル（Bowl.fbx）（容量：23kB、ポリゴン数：480、テクスチャなし） ・はし（chopstick_set.fbx）（容量：25kB、ポリゴン数：338、テクスチャなし）">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1274236">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "【無料ゲーム公開中】３Dモデル　食器・調理道具セット　ゲーム・漫画等利用可 - Papyrus Project - BOOTH">
     <meta name="twitter:description" content=
-    "本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版） 購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル 食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted pot.fbx）（容量：21kB、ポリゴン数：394） ・ボウル（Bowl.fbx）（容量：22kB、ポリゴン数：480） ・はし（chopstick_set.fbx）（容量：24kB、ポリゴン数：338） ・包丁（Cleaver.fbx）（容量：17kB、ポリゴン数：116） ・まな板（Cutting">
+    "2020年2月5日：一部のモデルサイズを変更いたしました。 本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版） 購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル 食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted pot.fbx）（容量：21kB、ポリゴン数：394、テクスチャなし） ・ボウル（Bowl.fbx）（容量：23kB、ポリゴン数：480、テクスチャなし） ・はし（chopstick_set.fbx）（容量：25kB、ポリゴン数：338、テクスチャなし）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/638bdca8-8bc8-4901-b690-2fef93d798d3/i/1274236/400511e2-ff0f-42de-a619-8d18e7f36d37_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【無料ゲーム公開中】３Dモデル　食器・調理道具セット　ゲーム・漫画等利用可 - Papyrus Project - BOOTH">
     <meta property="og:description" content=
-    "本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版） 購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル 食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted pot.fbx）（容量：21kB、ポリゴン数：394） ・ボウル（Bowl.fbx）（容量：22kB、ポリゴン数：480） ・はし（chopstick_set.fbx）（容量：24kB、ポリゴン数：338） ・包丁（Cleaver.fbx）（容量：17kB、ポリゴン数：116） ・まな板（Cutting">
+    "2020年2月5日：一部のモデルサイズを変更いたしました。 本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版） 購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル 食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted pot.fbx）（容量：21kB、ポリゴン数：394、テクスチャなし） ・ボウル（Bowl.fbx）（容量：23kB、ポリゴン数：480、テクスチャなし） ・はし（chopstick_set.fbx）（容量：25kB、ポリゴン数：338、テクスチャなし）">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/638bdca8-8bc8-4901-b690-2fef93d798d3/i/1274236/400511e2-ff0f-42de-a619-8d18e7f36d37_base_resized.jpg">
     <meta property="og:url" content=
@@ -327,36 +327,38 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            2020年2月5日：一部のモデルサイズを変更いたしました。
                             本製品をUnity内で実際にご覧になられるように無料ゲームを公開しております。(Windows版）
                             購入の前に、ぜひダウンロードしてみてください。 商品名：３Dモデル
                             食器・調理道具セット 容量・ポリゴン数：計24品 ・ずん胴鍋（Blunted
-                            pot.fbx）（容量：21kB、ポリゴン数：394）
-                            ・ボウル（Bowl.fbx）（容量：22kB、ポリゴン数：480）
-                            ・はし（chopstick_set.fbx）（容量：24kB、ポリゴン数：338）
-                            ・包丁（Cleaver.fbx）（容量：17kB、ポリゴン数：116）
+                            pot.fbx）（容量：21kB、ポリゴン数：394、テクスチャなし）
+                            ・ボウル（Bowl.fbx）（容量：23kB、ポリゴン数：480、テクスチャなし）
+                            ・はし（chopstick_set.fbx）（容量：25kB、ポリゴン数：338、テクスチャなし）
+                            ・包丁（Cleaver.fbx）（容量：17kB、ポリゴン数：116、テクスチャなし）
                             ・まな板（Cutting
-                            board.fbx）（容量：15kB、ポリゴン数：76）
+                            board.fbx）（容量：15kB、ポリゴン数：76、テクスチャなし）
                             ・カッティングボード（Cutting
-                            board2.fbx）（容量：16kB、ポリゴン数：160）
-                            ・土鍋（donabe.fbx）（容量：39kB、ポリゴン数：1416）
-                            ・泡立て器（Eggbeater.fbx）（容量：28kB、ポリゴン数：742）
-                            ・魚用フライパン（Fish_Flypan.fbx）（容量：29kB、ポリゴン数：286）
-                            ・フライパン（Flypan.fbx）（容量：29kB、ポリゴン数：856）
-                            ・フォーク（Fork.fbx）（容量：23kB、ポリゴン数：612）
-                            ・グリル用フライパン（Grill_Flypan.fbx）（容量：32kB、ポリゴン数：1072）
-                            ・ジョッキ（Jug.fbx）（容量：26kB、ポリゴン数：708）
-                            ・おたま（Ladle.fbx）（容量：23kB、ポリゴン数：544）
+                            board2.fbx）（容量：16kB、ポリゴン数：160、テクスチャなし）
+                            ・土鍋（donabe.fbx）（容量：41kB、ポリゴン数：1416、テクスチャなし）
+                            ・泡立て器（Eggbeater.fbx）（容量：30kB、ポリゴン数：742、テクスチャなし）
+                            ・魚用フライパン（Fish_Flypan.fbx）（容量：29kB、ポリゴン数：286、テクスチャなし）
+                            ・フライパン（Flypan.fbx）（容量：29kB、ポリゴン数：856、テクスチャなし）
+                            ・フォーク（Fork.fbx）（容量：25kB、ポリゴン数：612、テクスチャなし）
+                            ・グリル用フライパン（Grill_Flypan.fbx）（容量：32kB、ポリゴン数：1072、テクスチャなし）
+                            ・ジョッキ（Jug.fbx）（容量：26kB、ポリゴン数：708、テクスチャなし）
+                            ・おたま（Ladle.fbx）（容量：24kB、ポリゴン数：544、テクスチャなし）
                             ・肉切り包丁（Meat
-                            cleaver.fbx）（容量：17kB、ポリゴン数：106）
-                            ・おわん（Owan.fbx）（容量：34kB、ポリゴン数：641）
-                            ・パンケーキ用フライパン（PancakePan.fbx）（容量：29kB、ポリゴン数：856）
-                            ・ピーラー（Peeler.fbx）（容量：17kB、ポリゴン数：122）
-                            ・鍋しき（Pot laying.fbx）（容量：15kB、ポリゴン数：76）
-                            ・スープ鍋（SoupPot.fbx）（容量：29kB、ポリゴン数：856）
-                            ・ヘラ（Spatula.fbx）（容量：16kB、ポリゴン数：160）
-                            ・スプーン（Spoon.fbx）（容量：18kB、ポリゴン数：138）
-                            ・ちゃわん（Tyawan.fbx）（容量：32kB、ポリゴン数：515）
-                            ・中華鍋（Wok.fbx）（容量：25kB、ポリゴン数：680）
+                            cleaver.fbx）（容量：17kB、ポリゴン数：106、テクスチャなし）
+                            ・おわん（Owan.fbx）（容量：36kB、ポリゴン数：641、テクスチャなし）
+                            ・パンケーキ用フライパン（PancakePan.fbx）（容量：29kB、ポリゴン数：856、テクスチャなし）
+                            ・ピーラー（Peeler.fbx）（容量：17kB、ポリゴン数：122、テクスチャなし）
+                            ・鍋しき（Pot
+                            laying.fbx）（容量：15kB、ポリゴン数：76、テクスチャなし）
+                            ・スープ鍋（SoupPot.fbx）（容量：29kB、ポリゴン数：856、テクスチャなし）
+                            ・ヘラ（Spatula.fbx）（容量：16kB、ポリゴン数：160、テクスチャなし）
+                            ・スプーン（Spoon.fbx）（容量：19kB、ポリゴン数：138、テクスチャなし）
+                            ・ちゃわん（Tyawan.fbx）（容量：33kB、ポリゴン数：515、テクスチャなし）
+                            ・中華鍋（Wok.fbx）（容量：27kB、ポリゴン数：680、テクスチャなし）
                             拡張子：FBX形式 本製品は食器・料理器具を模した３Dモデルです。
                             拡張子はFBX形式のため、Unity・blender・ペイント３Dなどで、ご利用いただけます。
                             本製品をダウンロードする際はPapyrus
