updated at: 2020-02-06 01:34, VRCAvatarEditor beta - がとーしょこらのおみせ - BOOTH

--- a/VRChat/44/1258744.html
+++ b/VRChat/44/1258744.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH
+      VRCAvatarEditor beta - がとーしょこらのおみせ - BOOTH
     </title>
     <meta name="description" content=
     "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】 VRCAvatarEditor v0.3.0.1にバージョンアップする際には&quot;VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから&quot;VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "VRCAvatarEditor beta - がとーしょこらのおみせ - BOOTH">
     <meta name="twitter:description" content=
     "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】 VRCAvatarEditor v0.3.0.1にバージョンアップする際には&quot;VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから&quot;VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1258744/7df9c25c-28cb-4437-abb9-0af3e031a3a4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH">
+    "VRCAvatarEditor beta - がとーしょこらのおみせ - BOOTH">
     <meta property="og:description" content=
     "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3.0.1 【バージョンアップ時の注意事項】 VRCAvatarEditor v0.3.0.1にバージョンアップする際には&quot;VRCAvatarEditor/AnimationsフォルダをVRCAvatarEditorフォルダの外に移動させてから&quot;VRCAvatarEditorフォルダごと削除して再度本ツールをインポートしてください。">
     <meta property="og:image" content=
@@ -123,11 +123,11 @@
                           href="https://gatosyocora.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="がとーしょこらのおみせ @gatosyocora "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
+                            <img alt="がとーしょこらのおみせ" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5127238/icon_image/eb27c0f1-331b-445a-b5f7-961724b150c7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              がとーしょこらのおみせ @gatosyocora
+                              がとーしょこらのおみせ
                             </div>
                           </div></a>
                         </div>
@@ -328,7 +328,7 @@
                           "https://booth.pm/ja/items/1258744"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "VRCAvatarEditor beta | がとーしょこらのおみせ @gatosyocora"
+                          "VRCAvatarEditor beta | がとーしょこらのおみせ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
