--- a/VRChat/33/1231933.html
+++ b/VRChat/33/1231933.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      Saku*saku ナチュラルアイブロウ - 蒼空の下の市場 - BOOTH
+      Saku*saku ナチュラルアイブロウ - 蒼空の下の市場　BOOTH店 - BOOTH
     </title>
     <meta name="description" content=
     "「VRoidの為のコスメブランド、この春誕生…！」 これは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。 VRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います） ※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "Saku*saku ナチュラルアイブロウ - 蒼空の下の市場 - BOOTH">
+    "Saku*saku ナチュラルアイブロウ - 蒼空の下の市場　BOOTH店 - BOOTH">
     <meta name="twitter:description" content=
     "「VRoidの為のコスメブランド、この春誕生…！」 これは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。 VRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います） ※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/cb1b1816-d018-4c58-b349-b7f3c5d8bd2f/i/1231933/d84f3ab6-c3a8-4ac1-aa6a-22403ca63bdf_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "Saku*saku ナチュラルアイブロウ - 蒼空の下の市場 - BOOTH">
+    "Saku*saku ナチュラルアイブロウ - 蒼空の下の市場　BOOTH店 - BOOTH">
     <meta property="og:description" content=
     "「VRoidの為のコスメブランド、この春誕生…！」 これは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。 VRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います） ※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://sky-blue.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="蒼空の下の市場" class=
+                            <img alt="蒼空の下の市場　BOOTH店" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/23358/icon_image/3ab0d3c8-a25a-4c50-ab4f-a25beee000ec_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              蒼空の下の市場
+                              蒼空の下の市場　BOOTH店
                             </div>
                           </div></a>
                         </div>
@@ -236,7 +236,7 @@
                           "https://booth.pm/ja/items/1231933"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "Saku*saku ナチュラルアイブロウ | 蒼空の下の市場"
+                          "Saku*saku ナチュラルアイブロウ | 蒼空の下の市場　BOOTH店"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
