--- a/VRChat/86/1231386.html
+++ b/VRChat/86/1231386.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      Saku*saku シャイニーリップ - 蒼空の下の市場 - BOOTH
+      Saku*saku シャイニーリップ - 蒼空の下の市場　BOOTH店 - BOOTH
     </title>
     <meta name="description" content=
     "「VRoidの為のコスメブランド、この春誕生…！」 これは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。 VRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います） ※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "Saku*saku シャイニーリップ - 蒼空の下の市場 - BOOTH">
+    "Saku*saku シャイニーリップ - 蒼空の下の市場　BOOTH店 - BOOTH">
     <meta name="twitter:description" content=
     "「VRoidの為のコスメブランド、この春誕生…！」 これは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。 VRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います） ※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/cb1b1816-d018-4c58-b349-b7f3c5d8bd2f/i/1231386/a8b30711-c4cc-42c2-8ecb-c650c0e8b51e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "Saku*saku シャイニーリップ - 蒼空の下の市場 - BOOTH">
+    "Saku*saku シャイニーリップ - 蒼空の下の市場　BOOTH店 - BOOTH">
     <meta property="og:description" content=
     "「VRoidの為のコスメブランド、この春誕生…！」 これは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。 VRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います） ※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://sky-blue.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="蒼空の下の市場" class=
+                            <img alt="蒼空の下の市場　BOOTH店" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/23358/icon_image/3ab0d3c8-a25a-4c50-ab4f-a25beee000ec_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              蒼空の下の市場
+                              蒼空の下の市場　BOOTH店
                             </div>
                           </div></a>
                         </div>
@@ -235,7 +235,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1231386"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="Saku*saku シャイニーリップ | 蒼空の下の市場"
+                          data-text=
+                          "Saku*saku シャイニーリップ | 蒼空の下の市場　BOOTH店"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
